# evokity

./: Makefile  README.md  pyproject.toml
.github/workflows/: integration.yaml
analysis/: analysis_utils.py  compare_crossovers.py  compare_float_vector_mutations.py  compare_selection.py  compare_tree_mutations.py
evokity/: crossovers.py  mutations.py  selection.py
tests/: test_float_vector_blend_crossover.py  test_float_vector_mean_crossover.py  test_float_vector_multiplier_mutation.py  test_one_max.py  test_random_selection.py  test_roulette_selection.py  test_stochastic_selection.py  test_symbolic_regression.py  test_tree_shrink_mutation.py  test_vector_messy_one_point.py  test_vector_shuffle_mutation.py  test_vector_uniform_crossover.py
